Fix Spacing in file

--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,11 @@
-body{
+body {
   background-color: #ccc;
-  font-family:sans-serif;
+  font-family: sans-serif;
 }
 
 h1 {
   font-size: 1.5rem;
+}
 
 article {
   font-style: italic;
